2014-06-09  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgdiplus.cpp src/win/wgraph.c src/win/wgnuplib.h
	term/win.trm:
	Version 5 dashtypes. Custom dashtypes supported by GDI+ driver.

	* src/wxterminal/wxt_gui.cpp:  Also "restore" the window state on
	"raise".
	Bug #1389

	* src/win/winmain.c (WinMain):  Change type from PASCAL to CALLBACK.

	* src/fit.c:  Test if covariance matrix is available before saving
	it to user variables.

2014-06-08  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc win/README-Windows.txt win/README-ja.txt
	docs/gnuplot-ja.doc:  sync to docs version 1.891

2014-06-07  Mojca Miklavec  <mojca.miklavec.lists@gmail.com>

	* src/wxterminal/gp_cairo.c:  Scale dashlength with linewidth, similar
	to what qt does.

2014-06-04  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/plot.c src/win/winmain.c|h term/caca.trm:  Only if a wxt, caca
	or windows terminal window is open, the -persist option is handled by
	keeping the main input loop running. This is unfortunate but maybe the
	best we can do since we are missing a process fork or detach mechanism.
	This avoids a zombie process when no plot windows are open in a
	session. For the qt terminal -persist works as on other platforms
	since it uses a secondary process.
	Bugs #1308, #1335, #1343

2014-06-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c src/show.c src/save.c docs/gnuplot.doc:
	The hidden3d code processes the lines making up the plot border using
	the same algorithm as it does for the plot elements.  This renders
	partially occluded borders correctly for actual surfaces but fails to
	recognize occlusion for, e.g., 3D histograms drawn with impulses.
	New keyword option "set border behind" draws the border lines before
	the plot elements even for hidden3d plots.

	* src/term_api.h src/wxterminal/gp_cairo.c src/wxterminal/wxt_gui.cpp:
	Change the implementation of greying out inactive keybox entries in wxt